Remove scrollbar on textarea

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <div class="form-group m-0">
               <textarea
                 class="form-control chinese-text"
+                style="overflow: hidden;"
                 id="inputText"
                 rows="10"
                 cols="30"
