--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <form>
             <div class="form-group m-0">
               <textarea
-                class="form-control chinese-text"
+                class="form-control p-0 chinese-text"
                 style="overflow: hidden;"
                 id="inputText"
                 rows="10"
@@ -36,9 +36,7 @@
         </div>
         <div class="col px-2">
           <div class="card h-100 w-100 d-inline-block">
-            <div class="card-body">
-              <p id="outputText" class="chinese-text h-100 d-inline-block"></p>
-            </div>
+            <div id="outputText" class="card-body p-0 chinese-text"></div>
           </div>
         </div>
       </div>
